# blockchain-CS2023

./: CMakeLists.txt  README.md  app.h  block.h  blockchain.h  btree.h  btreeNode.h  btreePairNode.h  chainhash.h  circulararray.h  datastructures.h  double.h  heapNode.h  list.h  main.cpp  maxHeap.h  merkle.cpp  merkle.h  minHeap.h  node.h  sha256.cpp  sha256.h  simple_list.h  transaction.h  transactions.txt  transactions100.txt  transactions1000.txt  transactions10000.txt  trie.h
GUI/: admin.ui  find.ui  main.py  mainwindow.ui  modify.ui  ui_admin.py  ui_find.py  ui_mainwindow.py  ui_modify.py  ui_votes.py  votos.ui
